# pyouroboros

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: oecho.py  oecho_set.py
ffi/: fccntl_wrap.h  irm_wrap.h  pyouroboros_build.py  pyouroboros_build_dev.py  pyouroboros_build_irm.py
ouroboros/: __init__.py  cli.py  dev.py  event.py  irm.py  qos.py
